objects/ABTesting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Winner__c</fullName>
        <label>Winner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>AB Testing</label>
</CustomObject>